--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -27,7 +27,7 @@
 }
 
 .navbar {
-  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid #eaeaf2;
 }
 
 .getStartedButton {
@@ -37,6 +37,7 @@
   border-radius: 25px;
   padding: 5px 10px;
   color: #000;
+  font-size: 18px;
 }
 
 .getStartedButton:hover {
