:sparkles: dashboard page form update

--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -16,6 +16,10 @@
   font-family: "Inconsolata-Regular";
 }
 
+.link {
+  text-decoration: none;
+}
+
 .greenBackground {
   background-color: #47c98d;
   padding: 5px 10px;
